# app_programming_language

./: .gitattributes  Cargo.toml  README.md  idées.txt  task.md
docs/language_spec/: grammar.ebnf  syntax.md  types.md
electron-app/: .eslintrc.json  .gitattributes  .gitignore  main.js  package-lock.json  package.json  tsconfig.json
electron-app/rust-crypto-lib/: Cargo.toml
electron-app/rust-crypto-lib/src/: lib.rs
electron-app/rust-interpreter/: Cargo.toml
electron-app/rust-interpreter/src/: ast.rs  lexer.rs  lib.rs  parser.rs
electron-app/src/app/: fileSystem.ts
electron-app/src/common/: keybindings.js  renderer.js  styleManager.js  styles.css  syntaxHighlighting.js
electron-app/src/data/: connected_user.json  data_settings.json  en.json  es.json  fr.json  keybindings.json  settings.json  users.json
electron-app/src/rust-modules/hash_password/: Cargo.toml  hash_password.rs
electron-app/src/scripts/: keybindings.js  renderer.js  styleManager.js  syntax_highlighting.js
electron-app/src/services/: file.ts  popup.ts  translation.ts
electron-app/src/styles/: common_css.css
electron-app/src/types/: data.ts  popup.ts  translation.ts
electron-app/src/utils/: helpers.ts
ide/: main.js  package-lock.json  package.json
ide/console/: styles.css
ide/editor/: styles.css
ide/frontend/: main.js  package-lock.json  package.json
ide/frontend/console/: console.html  script.js  styles.css
ide/frontend/data/: data_settings.json
ide/frontend/editor/: editor.html  (+2 more)
ide/home/: script.js  styles.css
ide/settings/: script.js  settings.html  styles.css
(+65 files in other folders)
